--- a/src/app/login/page.module.scss
+++ b/src/app/login/page.module.scss
@@ -60,7 +60,6 @@
   color: white;
   font-size: 1.75rem;
   font-weight: 700;
-  margin-bottom: 2.5rem;
   line-height: 1.2;
   letter-spacing: -0.025em;
 }
@@ -80,7 +79,6 @@
 .featureIcon {
   width: 2.5rem;
   height: 2.5rem;
-  background-color: rgba(255, 255, 255, 0.15);
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -90,8 +88,8 @@
 }
 
 .featureIconSvg {
-  width: 1.375rem;
-  height: 1.375rem;
+  width: 2rem;
+  height: 2rem;
   color: white;
 }
 
@@ -101,11 +99,11 @@
 
 .featureTitle {
   color: white;
-  font-weight: 700;
-  font-size: 1.125rem;
+  font-size: 1rem;
   margin-bottom: 0.5rem;
   line-height: 1.2;
   letter-spacing: -0.01em;
+  font-style: italic;
 }
 
 .featureDescription {
